--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
-add_subdirectory("Engine/Launcher")
-add_subdirectory("Engine/Engine")
+add_subdirectory("Engine")
+add_subdirectory("Game")
