--- a/src/Engine/Launcher/CMakeLists.txt
+++ b/src/Engine/Launcher/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(${PROJECT_NAME} ${SOURCE})
 
 target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Headers")
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Engine::library)
+target_link_libraries(${PROJECT_NAME} PUBLIC Engine::library)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
 	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../Out"
