--- a/src/Engine/Engine/CMakeLists.txt
+++ b/src/Engine/Engine/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(${PROJECT_NAME} SHARED ${SOURCE})
 
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Headers")
 
+target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3)
+
 set_target_properties(${PROJECT_NAME} PROPERTIES
 	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../Out/bin"
 )
