--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ project("Spegetti Engine")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(USE_FOLDERS ON)
 
 add_subdirectory("Third Party")
 add_subdirectory("Engine")
