--- a/src/Engine/Engine/CMakeLists.txt
+++ b/src/Engine/Engine/CMakeLists.txt
@@ -9,6 +9,8 @@ target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/H
 target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
+	FOLDER "Engine"
+	
 	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../Out/bin"
 )
 
