--- a/src/Game/Demo/CMakeLists.txt
+++ b/src/Game/Demo/CMakeLists.txt
@@ -10,6 +10,8 @@ target_include_directories(${ProjectName} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/He
 
 target_link_libraries(${ProjectName} PUBLIC Engine::library)
 set_target_properties(${ProjectName} PROPERTIES
+	FOLDER "Games"
+	
 	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../Out/${PROJECT_NAME}"
 	LIBRARY_OUTPUT_NAME Client
 )
