--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -1,4 +1,4 @@
 project("Engine")
 
-add_subdirectory("Engine")
-add_subdirectory("Launcher")
+add_subdirectory("Core")
+add_subdirectory("PlugNPlay")
