--- a/src/Plugins/GLFW_Window/CMakeLists.txt
+++ b/src/Plugins/GLFW_Window/CMakeLists.txt
@@ -1,4 +1,4 @@
-project("SDL_Window")
+project("GLFW_Window")
 
 file(GLOB_RECURSE SOURCE "*.c" "*.h")
 
@@ -7,7 +7,7 @@ add_library(${PROJECT_NAME} SHARED ${SOURCE})
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Headers")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Core::library)
-target_link_libraries(${PROJECT_NAME} PRIVATE SDL3-shared)
+target_link_libraries(${PROJECT_NAME} PRIVATE GLFW::library)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
 	FOLDER "Plugins"
