--- a/src/Third Party/GLFW/CMakeLists.txt
+++ b/src/Third Party/GLFW/CMakeLists.txt
@@ -17,4 +17,7 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(GLFW)
 
-add_library(GLFW::library ALIAS glfw)   
+set_target_properties(glfw PROPERTIES FOLDER "Third Party/GLFW")
+set_target_properties(update_mappings PROPERTIES FOLDER "Third Party/GLFW")
+
+add_library(GLFW::library ALIAS glfw)
