--- a/src/Plugins/MGL_Renderer/CMakeLists.txt
+++ b/src/Plugins/MGL_Renderer/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(${PROJECT_NAME} SHARED ${SOURCE})
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Headers")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Core::library)
+target_link_libraries(${PROJECT_NAME} PRIVATE MGL::library)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
 	FOLDER "Plugins"
