--- a/src/Engine/PlugNPlay/CMakeLists.txt
+++ b/src/Engine/PlugNPlay/CMakeLists.txt
@@ -10,6 +10,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 	FOLDER "Engine"
 	
 	LIBRARY_OUTPUT_DIRECTORY	"${CMAKE_SOURCE_DIR}/../OUT/bin"
+	RUNTIME_OUTPUT_DIRECTORY	"${CMAKE_SOURCE_DIR}/../OUT/bin"
 )
 
 add_library(${PROJECT_NAME}::library ALIAS ${PROJECT_NAME})
