--- a/src/Plugins/MGL_Renderer/CMakeLists.txt
+++ b/src/Plugins/MGL_Renderer/CMakeLists.txt
@@ -1,5 +1,7 @@
 project("MGL_Renderer")
 
+find_package(OpenGL REQUIRED COMPONENTS OpenGL)
+
 file(GLOB_RECURSE SOURCE "*.c" "*.h")
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE})
@@ -8,6 +10,8 @@ target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/H
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Core::library)
 target_link_libraries(${PROJECT_NAME} PRIVATE MGL::library)
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenGL::GL)
+
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
 	FOLDER "Plugins"
