--- a/src/Launcher/CMakeLists.txt
+++ b/src/Launcher/CMakeLists.txt
@@ -1,6 +1,6 @@
 project("Launcher")
 
-file(GLOB_RECURSE SOURCE "*.c" "*.h")
+file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS "*.c" "*.h")
 
 add_executable(${PROJECT_NAME} ${SOURCE})
 
