--- a/src/Plugins/MGL_Renderer/CMakeLists.txt
+++ b/src/Plugins/MGL_Renderer/CMakeLists.txt
@@ -2,7 +2,7 @@ project("MGL_Renderer")
 
 find_package(OpenGL REQUIRED COMPONENTS OpenGL)
 
-file(GLOB_RECURSE SOURCE "*.c" "*.h")
+file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS "*.c" "*.h")
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE})
 
