--- a/src/Third Party/GLAD/MGL/CMakeLists.txt
+++ b/src/Third Party/GLAD/MGL/CMakeLists.txt
@@ -1,6 +1,6 @@
 project("MGL_GLAD")
 
-file(GLOB_RECURSE SOURCE "*.c" "*.h")
+file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS "*.c" "*.h")
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE})
 
