--- a/src/Launcher/CMakeLists.txt
+++ b/src/Launcher/CMakeLists.txt
@@ -8,6 +8,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/
 
 target_link_libraries(${PROJECT_NAME} PRIVATE Core::library)
 target_link_libraries(${PROJECT_NAME} PRIVATE PlugNPlay::library)
+target_link_libraries(${PROJECT_NAME} PRIVATE m)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
 	FOLDER "Engine"
