--- a/src/Third Party/ASSIMP/CMakeLists.txt
+++ b/src/Third Party/ASSIMP/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../OUT/bin)
 
+set(LANGUAGE CPP_STANDARD)
+
 set(BUILD_SHARED_LIBS ON)
 set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
 set(ASSIMP_BUILD_SAMPLES OFF)
